# heronote

./: .gitignore  CLAUDE.md  Cargo.toml  mvp.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tsconfig.tsbuildinfo
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: audio_service.rs  audio_state.rs  commands.rs  debug_service.rs  debug_state.rs  lib.rs  main.rs
apps/desktop/src/components/: DebugPanel.tsx
apps/desktop/src/stores/: debug-store.ts
crates/audio-core/: Cargo.toml
crates/audio-core/src/: device.rs  error.rs  lib.rs  traits.rs
crates/audio-linux/: Cargo.toml
crates/audio-linux/src/: device.rs  lib.rs  mic.rs  speaker.rs
crates/audio-macos/: Cargo.toml
crates/audio-macos/src/: conversion.rs  device.rs  lib.rs  mic.rs  speaker.rs
crates/audio-windows/: Cargo.toml
crates/audio-windows/src/: device.rs  lib.rs  mic.rs  speaker.rs
scripts/: build-macos.sh
