[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Heronote Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
futures = "0.3"

# Audio
cpal = "0.15"
ringbuf = "0.4"
cidre = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tauri
tauri = { version = "2", features = ["macos-private-api"] }
tauri-build = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Debug utilities
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
