[package]
name = "heronote-audio-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows audio capture implementation for heronote"

[dependencies]
heronote-audio-core = { path = "../audio-core" }
cpal.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.19"
