[package]
name = "heronote-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "heronote_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true

# Debug utilities (only in debug builds)
hound.workspace = true
chrono.workspace = true
directories.workspace = true

# Internal crates
heronote-audio-core = { path = "../../../crates/audio-core" }

[target.'cfg(target_os = "macos")'.dependencies]
heronote-audio-macos = { path = "../../../crates/audio-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
heronote-audio-windows = { path = "../../../crates/audio-windows" }

[target.'cfg(target_os = "linux")'.dependencies]
heronote-audio-linux = { path = "../../../crates/audio-linux" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
